Add feedback from form and add texts

--- a/src/utils/languages/en.json
+++ b/src/utils/languages/en.json
@@ -36,7 +36,9 @@
         "email": "Email",
         "message": "Message",
         "send": "Send",
-        "email1": "molina.santiago.martin@gmail.com"
+        "sending": "Sending",
+        "email1": "molina.santiago.martin@gmail.com",
+        "success": "Your message has been sent"
     },
     "socialMediaLinks": {
         "linkedIn": "LinkedIn",
