--- a/src/utils/languages/en.json
+++ b/src/utils/languages/en.json
@@ -17,13 +17,19 @@
     },
     "about": {
         "aboutMe":"About me",
-        "description": "I'm from Tucuman, Argentina. Cuando empecé mi etapa universitaria me inscribí a la carrera de ingeniería en sistemas para poder entender y aprender mas del mundo IT, asi hasta llegar a tercer año. Muy convencido de que mi enfoque era más hacia la programación, decidí darle ese rumbo a mi vida y comencé a estudiar desarrollo web, hasta que me gradué como fullstack developer (aunque siempre me atrajo mas el frontend). Soy un programador que busca un equipo de trabajo para poder aplicar mis conocimientos, adquirir experiencia, aprender mucho más, y crecer profesionalmente en esta carrera que me apasiona.",
+        "description": "I'm from Tucuman, Argentina. When I started my university stage I signed up for a degree in systems engineering to be able to understand and learn more about the IT world. Very convinced that my focus was more to programming, I decided to give my life that direction and I started studying web development until I graduated as a fullstack developer. I am a programmer looking for a work team to be able to apply my knowledge, gain experience, learn much more and grow professionally in this career.",
         "downloadCV": "Download resume"
     },
     "projects": {
         "projects": "My projects",
         "viewRepo": "See repository",
-        "viewDemo": "See demo"
+        "viewDemo": "See demo",
+        "Movye": "Web application to search movies, order and filter them. It also allows you to add movies to favorites and watchlist. Used technologies: Next.js and styled components.",
+        "Arthub": "An e-commerce for selling work of art. It was done in a group, using the SCRUM methodology. Used technologies: React, Redux, Express, Sequelize, Firebase, PostgreSQL and authentication with JWT.",
+        "Memotest": "Classic memotest game, with the possibility of choosing 2 themes. Used technologies: typescript and styled components",
+        "PI - Dogs": "Fullstack single project. It consists of an application that shows information on all breeds, it is also possible to create new breeds. Used technologies: React, Redux, Express, Sequelize and PostgreSQL.",
+        "App-Clima": "Web application made with React. It allows you to search for weather data from any city in the world."
+        
     },
     "marquee1": {
         "openToWork": "Open to work",
