--- a/src/utils/languages/en.json
+++ b/src/utils/languages/en.json
@@ -17,7 +17,7 @@
     },
     "about": {
         "aboutMe":"About me",
-        "description": "I'm from Tucuman, Argentina. When I started my college stage I signed up for systems engineering so I'll be able to understand and learn more about the IT world. I was very convinced that my focus was more about programming so I decided to give my life that direction and I started studying web development until I graduated as a fullstack developer. I am a programmer looking for a work team to be able to apply all my knowledge, gain some experience, learn more and grow professionally in this career.",
+        "description": "I'm from Tucuman, Argentina. When I started college, I signed up for Systems Engineering in order to understand and learn more about the IT world. Being convinced that programming was what I wanted to focus on, I decided to steer my life in that direction and graduated from a bootcamp as a full-stack developer. I'm a programmer looking for a team where I can learn and put all my knowledge into practice, gain experience and grow professionally in this career.",
         "downloadCV": "Download resume"
     },
     "projects": {
@@ -25,10 +25,10 @@
         "viewRepo": "See repository",
         "viewDemo": "See demo",
         "Movye": "Web application to search movies, order and filter them. It also allows to add movies to favorites and watchlist. Technologies: Next.js and styled components.",
-        "Arthub": "E-commerce web for selling artworks. It was done in group, using the SCRUM methodology. Technologies: React, Redux, Express, Sequelize, Firebase, PostgreSQL and authentication with JWT.",
-        "Memotest": "Classic memotest game, with the possibility of choosing 2 themes. Technologies: typescript and styled components",
-        "PI - Dogs": "Fullstack single project. It consists of an application that shows information about all dog breeds, it's also possible to create new breeds. Technologies: React, Redux, Express, Sequelize and PostgreSQL.",
-        "App-Clima": "Web application made with React. It allows to search for weather data from any city in the world."
+        "Arthub": "E-commerce for selling art. Developed alongside a team, using the scrum methodology. Technologies: React, Redux, Express, Sequelize, Firebase, PostgreSQL and authentication with JWT.",
+        "Memotest": "Classic memory game, with the possibility of choosing 2 themes. Technologies: typescript and styled components",
+        "PI - Dogs": "Full-stack individual project. It's an application that shows information about every dog breed. It's also possible to create new ones. Technologies: React, Redux, Express, Sequelize and PostgreSQL.",
+        "App-Clima": "Web application made with React. Look up the weather information of any city in the world."
         
     },
     "marquee1": {
